Bug 837051 - Store less buffers for video playback at MediaOmxReader. r=doublec