content/media/omx/MediaOmxStateMachine.h
@@ -21,7 +21,7 @@ protected:
   // OMXCodec will crash.
   // So we need few enough buffers in the queue that all buffers will be
   // returned before OMXCodec begins shutdown.
-  uint32_t GetAmpleVideoFrames() { return 2; }
+  uint32_t GetAmpleVideoFrames() { return 1; }
 };
 
 } // namespace mozilla
